# Transfer-Image-Over-Tcp

./: README.md
MIrroringTCPServer/: CMakeLists.txt  LoggerInfo.h  logging_queue.cpp  logging_queue.h  main.cpp  session_logger.cpp  session_logger.h  singleton_queue.cpp  singleton_queue.h
MirroringClient/: CMakeLists.txt  main.cpp
MirroringClient/tools/gate/cmake/configs/: config.cmake
